Added input, add button, and task list container

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="list.css">
 </head>
 <body>
     <header>
@@ -11,5 +12,15 @@
         <p>Keep track of your tasks and get things done!</p>
     </header>
 
+    <div class="todo-container">
+        <input type="text" id="taskInput" placeholder="Enter a new task">
+        <button id="addBtn">Add Task</button>
+
+        <ul id="taskList">
+            <!-- Tasks will appear here -->
+        </ul>
+    </div>
+
+    <script src="list.js"></script>
 </body>
 </html>
