adding welcome image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="list.css">
+    
 </head>
 <body>
     <header>
         <h1>To-Do List</h1>
         <p>Keep track of your tasks and get things done!</p>
+        <img src="todo.png" alt="Welcome to your To-Do List" class="welcome-image">
     </header>
 
     <div class="todo-container">
