modifying the front page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             <!-- Tasks will appear here -->
         </ul>
     </div>
+    <footer>
+        <p style="text-align:center; font-size:25px; color:#000000;">Made by Ram N</p>
+        <p style="text-align:center; font-size:20px; color:#000000;">25BCE1353</p>
+        <p style="text-align:center; font-size:20px; color:#000000;">
+            <a href=ram.csedev@gmail.com style="color:#000000;text-decoration:none;">
+                ram.csedev@gmail.com
+            </a>
+        </p>
+    </footer>
 
     <script src="list.js"></script>
 </body>
